testdata/prettier/w-proc-header-missing-parens.out
Syntax error: "./testdata/prettier/w-proc-header-missing-parens.goat" (line 2, column 1):
unexpected begin
