testdata/prettier/w-proc-header-missing-parens.goat
proc main
begin
  write "Test\n";
end
